--- a/themes/hextra/layouts/partials/navbar.html
+++ b/themes/hextra/layouts/partials/navbar.html
@@ -16,7 +16,7 @@
 <div class="nav-container hx-sticky hx-top-0 hx-z-20 hx-w-full hx-bg-transparent print:hx-hidden">
   <div class="nav-container-blur hx-pointer-events-none hx-absolute hx-z-[-1] hx-h-full hx-w-full hx-bg-white dark:hx-bg-dark hx-shadow-[0_2px_4px_rgba(0,0,0,.02),0_1px_0_rgba(0,0,0,.06)] contrast-more:hx-shadow-[0_0_0_1px_#000] dark:hx-shadow-[0_-1px_0_rgba(255,255,255,.1)_inset] contrast-more:dark:hx-shadow-[0_0_0_1px_#fff]"></div>
 
-  <nav class="hx-mx-auto hx-pt-3 hx-flex hx-items-center hx-justify-end hx-gap-2 hx-h-16 {{ $navWidth }}">
+  <nav class="hx-mx-auto hx-flex hx-items-center hx-justify-end hx-gap-2 hx-h-16 {{ $navWidth }}">
     <a class="hx-flex hx-items-center hover:hx-opacity-75 ltr:hx-mr-auto rtl:hx-ml-auto" href="{{ $logoLink }}">
       <div class="printn-container">
         <span class="printn-text hx-text-2xl hx-font-bold hx-inline hx-select-none"></span>
@@ -50,7 +50,7 @@
     {{- end -}}
 
     {{- /* Add Language Switcher and Theme Toggle */ -}}
-    <div class="language-theme-container hx-mb-5px">
+    <div class="language-theme-container">
       {{- with site.Params.theme.displayToggle }}{{ partial "theme-toggle.html" }}{{ end -}}
     </div>
   </nav>
