--- a/themes/hextra/layouts/partials/navbar.html
+++ b/themes/hextra/layouts/partials/navbar.html
@@ -50,7 +50,7 @@
     {{- end -}}
 
     {{- /* Add Language Switcher and Theme Toggle */ -}}
-    <div class="language-theme-container">
+    <div class="theme-toggle-container hx-h-30px">
       {{- with site.Params.theme.displayToggle }}{{ partial "theme-toggle.html" }}{{ end -}}
     </div>
   </nav>
