--- a/themes/hextra/layouts/partials/head.html
+++ b/themes/hextra/layouts/partials/head.html
@@ -9,7 +9,7 @@
   {{ partialCached "favicons.html" . -}}
   <title>
     {{- if .IsHome -}}
-        {{ .Site.Title -}}&nbsp;– Hobby Software Developer
+        {{ .Site.Title -}}&nbsp;– Code, CTFs & Privacy
     {{ else -}}
       {{ with .Title }}{{ . }} – {{ end -}}
       {{ .Site.Title -}}
@@ -67,7 +67,7 @@
           "url": "{{ .Page.Permalink }}",
           "logo": "https://printn.dev/images/logo.svg",
           "sameAs": [
-              "https://github.com/BeginnerPrivacy",
+              "https://github.com/PrintN",
               "https://leetcode.com/PrintN",
               "https://tryhackme.com/p/PrintN"
           ]
@@ -82,7 +82,7 @@
           "url": "https://printn.dev",
           "logo": "https://printn.dev/images/logo.svg",
           "sameAs": [
-              "https://github.com/BeginnerPrivacy",
+              "https://github.com/PrintN",
               "https://leetcode.com/PrintN",
               "https://tryhackme.com/p/PrintN"
           ]
