--- a/themes/hextra/assets/css/custom.css
+++ b/themes/hextra/assets/css/custom.css
@@ -218,7 +218,7 @@ section#contact {
 .nav-dot.active {
     background-color: #006ce8;
     transform: scale(1.3);
-    box-shadow: 0 0 10px rgba(16, 192, 80, 0.5);
+    box-shadow: 0 0 10px rgba(0, 108, 232, 0.5);
 }
 .nav-dot.active:is(html[class~="dark"] *) {
     background-color: #10C050;
@@ -229,10 +229,10 @@ section#contact {
 .nav-dot::after {
     content: attr(data-title);
     position: absolute;
-    right: 0;  /* Start hidden to the right */
+    right: 0;
     top: 50%;
     transform: translateY(-50%) translateX(30%);
-    opacity: 0;  /* Start invisible */
+    opacity: 0;
     padding: 5px 12px;
     border-radius: 4px;
     font-size: 16px;
