--- a/themes/hextra/layouts/shortcodes/hextra/recent-posts.html
+++ b/themes/hextra/layouts/shortcodes/hextra/recent-posts.html
@@ -1,6 +1,6 @@
 {{ range first 3 .Site.RegularPages }}
     <a href="{{ .Permalink }}" target="_blank" class="hx-text-primary-600 hover:hx-text-primary-800 font-semibold">
-        <li class="blog-post-card">
+        <div class="blog-post-card">
             <h2>{{ .Title }}</h2>
             <div class="hx-flex hx-justify-between hx-text-gray-500 hx-text-sm hx-mt-1">
                 <span>{{ .Date | time.Format ":date_long" }}</span>
@@ -10,6 +10,6 @@
                     {{ end }}
                 {{ end }}
             </div>
-        </li>
+        </div>
     </a>
 {{ end }}
