chore(homepage): Remove drag scrolling

--- a/themes/hextra/layouts/partials/head-css.html
+++ b/themes/hextra/layouts/partials/head-css.html
@@ -16,26 +16,30 @@
 
 
 <!-- Custom CSS -->
-{{- $custom := resources.Get "css/custom.css" }}
-{{- $blog := resources.Get "css/components/custom/blog.css" }}
-{{- $footer := resources.Get "css/components/custom/footer.css" }}
-{{- $homepage := resources.Get "css/components/custom/homepage.css" }}
-{{- $nav := resources.Get "css/components/custom/nav.css" }}
+{{- $first := resources.Get "css/custom/first.css" }}
+{{- $blog := resources.Get "css/custom/blog.css" }}
+{{- $footer := resources.Get "css/custom/footer.css" }}
+{{- $homepage := resources.Get "css/custom/homepage.css" }}
+{{- $nav := resources.Get "css/custom/nav.css" }}
+{{- $404 := resources.Get "css/custom/404.css" }}
 {{- if hugo.IsProduction -}}
   {{- $custom = $custom | minify | fingerprint }}
   {{- $blog = $blog | minify | fingerprint }}
   {{- $footer = $footer | minify | fingerprint }}
   {{- $homepage = $homepage | minify | fingerprint }}
   {{- $nav = $nav | minify | fingerprint }}
-  <link href="{{ $custom.RelPermalink }}" rel="stylesheet" integrity="{{ $custom.Data.Integrity }}" media="print" onload="this.media='all'" />
+  {{- $404 = $404 | minify | fingerprint }}
+  <link href="{{ $first.RelPermalink }}" rel="stylesheet" integrity="{{ $first.Data.Integrity }}" media="print" onload="this.media='all'" />
   <link href="{{ $blog.RelPermalink }}" rel="stylesheet" integrity="{{ $blog.Data.Integrity }}" media="print" onload="this.media='all'" />
   <link href="{{ $footer.RelPermalink }}" rel="stylesheet" integrity="{{ $footer.Data.Integrity }}" media="print" onload="this.media='all'" />
   <link href="{{ $homepage.RelPermalink }}" rel="stylesheet" integrity="{{ $homepage.Data.Integrity }}" />
   <link href="{{ $nav.RelPermalink }}" rel="stylesheet" integrity="{{ $nav.Data.Integrity }}" media="print" onload="this.media='all'" />
+  <link href="{{ $404.RelPermalink }}" rel="stylesheet" integrity="{{ $404.Data.Integrity }}" media="print" onload="this.media='all'" />
 {{- else }}
-  <link href="{{ $custom.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
+  <link href="{{ $first.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
   <link href="{{ $blog.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
   <link href="{{ $footer.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
   <link href="{{ $homepage.RelPermalink }}" rel="stylesheet" />
   <link href="{{ $nav.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
+  <link href="{{ $404.RelPermalink }}" rel="stylesheet" media="print" onload="this.media='all'" />
 {{- end }}
